--- a/css/scss/app.scss
+++ b/css/scss/app.scss
@@ -1,4 +1,5 @@
-// import variables
-// import mixins
-// import reset (from tools)
-// import globals
+@import 'variables';
+@import 'mixins';
+
+@import 'globals';
+@import 'tools/reset';
