--- a/css/scss/tools/reset.scss
+++ b/css/scss/tools/reset.scss
@@ -22,6 +22,8 @@ summary {
 }
 
 body {
+  font-family: 'open sans';
+  color: #333;
   background: #f5f5f5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
